--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         height="200">
 
         <br><br>
-        <a href="data/horor.webp">
+        <a href="data/valak.jpg">
         <button>click me</button>
         </a>
     </body>
+
 </html>
