--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         height="200">
 
         <br><br>
-        <a href="data/valak.jpg">
+        <a href="data/jumpscare-cat.gif">
         <button>click me</button>
         </a>
     </body>
 
 </html>
+
